--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "chart.js": "^4.4.4",
     "chartjs-adapter-moment": "^1.0.1",
     "d3": "^7.9.0",
+    "dexie": "^4.0.8",
     "express": "^4.18.2",
     "http-proxy-middleware": "^3.0.2",
+    "idb": "^8.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
