--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.18.2",
     "http-proxy-middleware": "^3.0.2",
     "idb": "^8.0.0",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
