--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "d3": "^7.9.0",
     "dexie": "^4.0.8",
     "express": "^4.18.2",
