--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
-    "chart.js": "^4.4.4",
+    "chart.js": "^4.4.6",
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "dexie": "^4.0.8",
     "express": "^4.18.2",
     "http-proxy-middleware": "^3.0.2",
     "idb": "^8.0.0",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
@@ -28,6 +30,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.28.0",
+    "react-window": "^1.8.10",
     "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
   },
